# dotnet_1

./: README.md  Social.Solution.sln
api/: Dockerfile  Program.cs  api.csproj  api.http  appsettings.json
api/Controllers/: AccountController.cs  CommentController.cs  PortfolioController.cs  StockController.cs
api/Data/: ApplicationDBContext.cs
api/Dtos/Account/: LoginDto.cs  NewUserDto.cs  RegisterDto.cs
api/Dtos/Comment/: CommentDto.cs  CreateCommentDto.cs  UpdateCommentRequestDto.cs
api/Dtos/Stock/: CreateStockRequestDto.cs  FMPStock.cs  StockDto.cs  UpdateStockRequestDto.cs
api/Extensions/: ClaimsExtensions.cs
api/Helpers/: CommentQueryObject.cs  QueryObject.cs
api/Interfaces/: ICommentRepository.cs  IFPMService.cs  IPortfolioRepository.cs  IStockRepository.cs  ITokenService.cs
api/Mappers/: CommentMapper.cs  StockMappers.cs
api/Migrations/: 20240302211855_init.Designer.cs  20240310153511_Identity.Designer.cs  20240310230129_SeedRole.Designer.cs  20240310230129_SeedRole.cs  20240313112253_CommentsOneToOne.Designer.cs  20240313112253_CommentsOneToOne.cs
api/Models/: AppUser.cs  Comment.cs  Portfolio.cs  Stock.cs
api/Properties/: launchSettings.json
api/Repository/: CommentRepository.cs  PortfolioRepository.cs  StockRepository.cs
api/Service/: FMPService.cs  TokenService.cs
api_made_in_rust/: .env.example  .gitignore  Cargo.toml
api_made_in_rust/src/: database.rs  main.rs  models.rs
api_made_in_rust/src/mssql/: insert.sql  script.sql
