[package]
name = "api_made_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
axum-macros = "0.4.1"
deadpool-tiberius = "0.1.7"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
tiberius = "0.12.2"
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
